--- a/index.html
+++ b/index.html
@@ -5,39 +5,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>A Perfect Diet</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-   
-    <div id="section">
-        <h1>Favourite Netflix Series</h1>
-        <h3>(Will be telling which series I liked the most) </h3>
-    </div>
-    <div id="body">
-        <div class="body-items">
-        Like everyone I am also into Netflix Series very much.
-        There was a time when I was so much obessed with these things that I used to spend half of my time watching
-        series.
-        And top of that I personally watch in one go, avoiding the suspense building for next episode.</div>
-        <div class="body-items">
-        First series that I watched was sucide,love genre series name "13 reasons Why?". At the very beginning I gained
-        interest. So, I didn't cared about anything and just kept watching.I have completed its season-1 in a day or
-        two. Then my obession picked up and I was unstoppable.
-        Then I watched some other series named- "Stranger Things" , "Lucifer" , "Breaking Bad" , "Vampire Diaries"
-        etc.</div>
-        <div class="body-items">
-        In these series I loved "You" , "Vampire Diaries". I personally link love genre series so mine are these.<br>
-        After wasting 2 years in this , now I understood that series are meant to be watched one episode a day not a season a day.
-        Currently, I am watching Kota factory season-2 (released recently).
-        But this time one episode a day or two.</div>
-        <div class="body-items">Please see my recommendation app based on series
-            <a href="https://codesandbox.io/s/goodbooks-forked-0c7zu?file=/src/App.js">Series recommendation App</a>
+    <div id="contianer">
+        <h1>A Perfect Diet</h1>
+        <div id="section">
+            <div id="part1">
+                <h3>What is a perfect diet all about?</h3>
+                <p>
+               
+                Everybody in this busy life, don't bother about personal heath. But it is scientifically proven that a
+                healthy diet makes a person most effective and improves immunity. According to studies, a normal person
+                should atleast take a given amount of proteins, carbs , fats(good fat) and various vitamins. A healthy
+                diet doesn't really mean you shouldn't eat junk or oily foods. A healthy diet is biased with nunber of
+                "calories" a person is taking and what amount of it is being burnt in 24hrs time span.
+                </p>
+                <img src="1.jpg" alt="heath">
+            </div>
+            <div id="part2">
+                <h3>First Question to a person mind</h3>
+                <p>
+                   
+                    After we enlighten a person that what a healthy diet includes , first question that comes to the
+                    mind is <b>"If its all about maintaining balance and amount of calories. Then How much should be
+                        enough calories?"</b>
+                </p>
+                <img src="2.jpg" alt="calories">
+            </div>
+            <div id="part3">
+                <p>
+                Answer to the question is very simple, there is more than enough calories calculator which calculates amount of calories to be taken by a person in accordance with their weight and fat percentaage. It may include purpose too , like if he/she need a diet for wight loss , he/she should take a calories defecient diet (200-300caloris lower than the actual amount to be taken) or if weight gain is the purpose then 200 -300 calories extra than usual.
+                But here comes the toughest part <b>i.e</b> maintaining balance of nutrients and vitamins in the diet.
+                <b>Below is the table related to it.</b></p>
+
+                <img src="3.jpg" alt="pie-chart">
+
+
+
+            </div>
+
+            <div id="part4">
+                <p>
+                    <b>Note:</b> Anthing taken in surplus amount can cause disbalance not even the good vitamins. Taking a good thing in a good appropriate amount can save the body. Exercising for atleast 3-4 days a week will burn a good amount of stored fat . 
+
+
+                </p>
+
+
+
+            </div>
         </div>
 
+
+
+
+            <script src="index.js"></script>
+
     </div>
-    <script src="index.js"></script>
 </body>
 
 </html>
