--- a/index.html
+++ b/index.html
@@ -10,25 +10,52 @@
 </head>
 
 <body>
+    <navbar id="nav">
+        <div class="logo">
+            <a href="home.html">
+                </a>
+        </div>
+        <div class="menu">
+            <ul>
+                <li class="menu-items"><a href="home.html">Home</a></li>
+                <li class="menu-items"><a href="about.html">About</a></li>
+                <li class="menu-items"><a href="blog.html">Blog</a></li>
+                <li class="menu-items"><a href="projects.html">Projects</a></li>
+                <li class="menu-items"><a href="certifications.html">Certifications</a></li>
+                <li class="menu-items"><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+        <div class="social">
+            <a href="https://github.com/Anandpandey0">
+            </a>
+            <a href="https://instagram.com/anand____pandey?utm_medium=copy_link"></a>
+            <a href="https://www.linkedin.com/in/anand-pandey-7522b81b4"></a>
+            <a href="mailto:anand.pandey1052@gmail.com"></a>
+        </div>
+    </navbar>
     <div id="contianer">
         <h1>A Perfect Diet</h1>
         <div id="section">
             <div id="part1">
                 <h3>What is a perfect diet all about?</h3>
                 <p>
-               
-                Everybody in this busy life, don't bother about personal heath. But it is scientifically proven that a
-                healthy diet makes a person most effective and improves immunity. According to studies, a normal person
-                should atleast take a given amount of proteins, carbs , fats(good fat) and various vitamins. A healthy
-                diet doesn't really mean you shouldn't eat junk or oily foods. A healthy diet is biased with nunber of
-                "calories" a person is taking and what amount of it is being burnt in 24hrs time span.
+
+                    Everybody in this busy life, don't bother about personal heath. But it is scientifically proven that
+                    a
+                    healthy diet makes a person most effective and improves immunity. According to studies, a normal
+                    person
+                    should atleast take a given amount of proteins, carbs , fats(good fat) and various vitamins. A
+                    healthy
+                    diet doesn't really mean you shouldn't eat junk or oily foods. A healthy diet is biased with nunber
+                    of
+                    "calories" a person is taking and what amount of it is being burnt in 24hrs time span.
                 </p>
                 <img src="1.jpg" alt="heath">
             </div>
             <div id="part2">
                 <h3>First Question to a person mind</h3>
                 <p>
-                   
+
                     After we enlighten a person that what a healthy diet includes , first question that comes to the
                     mind is <b>"If its all about maintaining balance and amount of calories. Then How much should be
                         enough calories?"</b>
@@ -37,9 +64,15 @@
             </div>
             <div id="part3">
                 <p>
-                Answer to the question is very simple, there is more than enough calories calculator which calculates amount of calories to be taken by a person in accordance with their weight and fat percentaage. It may include purpose too , like if he/she need a diet for wight loss , he/she should take a calories defecient diet (200-300caloris lower than the actual amount to be taken) or if weight gain is the purpose then 200 -300 calories extra than usual.
-                But here comes the toughest part <b>i.e</b> maintaining balance of nutrients and vitamins in the diet.
-                <b>Below is the table related to it.</b></p>
+                    Answer to the question is very simple, there is more than enough calories calculator which
+                    calculates amount of calories to be taken by a person in accordance with their weight and fat
+                    percentaage. It may include purpose too , like if he/she need a diet for wight loss , he/she should
+                    take a calories defecient diet (200-300caloris lower than the actual amount to be taken) or if
+                    weight gain is the purpose then 200 -300 calories extra than usual.
+                    But here comes the toughest part <b>i.e</b> maintaining balance of nutrients and vitamins in the
+                    diet.
+                    <b>Below is the table related to it.</b>
+                </p>
 
                 <img src="3.jpg" alt="pie-chart">
 
@@ -49,7 +82,9 @@
 
             <div id="part4">
                 <p>
-                    <b>Note:</b> Anthing taken in surplus amount can cause disbalance not even the good vitamins. Taking a good thing in a good appropriate amount can save the body. Exercising for atleast 3-4 days a week will burn a good amount of stored fat . 
+                    <b>Note:</b> Anthing taken in surplus amount can cause disbalance not even the good vitamins. Taking
+                    a good thing in a good appropriate amount can save the body. Exercising for atleast 3-4 days a week
+                    will burn a good amount of stored fat .
 
 
                 </p>
@@ -62,7 +97,7 @@
 
 
 
-            <script src="index.js"></script>
+        <script src="index.js"></script>
 
     </div>
 </body>
