--- a/index.html
+++ b/index.html
@@ -100,6 +100,18 @@
         <script src="index.js"></script>
 
     </div>
+    <footer>
+        <div class="social">
+            <a href="https://github.com/Anandpandey0">
+                <img src="github.svg" alt="Github">
+            </a>
+            <a href="https://instagram.com/anand____pandey?utm_medium=copy_link"><img src="instagram.svg"
+                    alt="Instagram"></a>
+            <a href="https://www.linkedin.com/in/anand-pandey-7522b81b4"><img src="linkedin.png"
+                    alt="linkedin"></a>
+            <a href="mailto:anand.pandey1052@gmail.com"><img src="envelope-fill.svg" alt="mail"></a>
+        </div>
+    </footer>
 </body>
 
 </html>
