--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="https://github.com/Anandpandey0">
             </a>
             <a href="https://instagram.com/anand____pandey?utm_medium=copy_link"></a>
-            <a href="https://www.linkedin.com/in/anand-pandey-7522b81b4"></a>
+            <a href="https://www.linkedin.com/in/Anandpandey0"></a>
             <a href="mailto:anand.pandey1052@gmail.com"></a>
         </div>
     </navbar>
