--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </a>
             <a href="https://instagram.com/anand____pandey?utm_medium=copy_link"><img src="instagram.svg"
                     alt="Instagram"></a>
-            <a href="https://www.linkedin.com/in/anand-pandey-7522b81b4"><img src="linkedin.png"
+            <a href="https://www.linkedin.com/in/Anandpandey0"><img src="linkedin.png"
                     alt="linkedin"></a>
             <a href="mailto:anand.pandey1052@gmail.com"><img src="envelope-fill.svg" alt="mail"></a>
         </div>
