--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                 <div class="content">
                     <p>Get meaning of emoji.A React based app</p>
                     <a href="https://codesandbox.io/s/blissful-frost-bs8qz?file=/src/App.js">Live Project</a>
-                    <a href="https://codesandbox.io/s/blissful-frost-bs8qz?file=/src/App.js">Code</a>
+                    <a href="https://github.com/Anandpandey0/emojipedia-a_fun_react_app">Code</a>
                 </div>
             </div>
         </div>
@@ -124,7 +124,7 @@
                 <div class="content">
                     <p>A React based App for series recommendation</p>
                     <a href="https://codesandbox.io/s/goodbooks-forked-0c7zu?file=/src/App.js">Live Project</a>
-                    <a href="https://codesandbox.io/s/goodbooks-forked-0c7zu?file=/src/App.js">Code</a>
+                    <a href="https://github.com/Anandpandey0/series-recommendation-app">Code</a>
                 </div>
             </div>
         </div>
